refactor(core): improve code readability and initialization consistency
- Fixed variable initialization for `unoconvPath` in `ExternalAppDepConfig`.
- Adjusted ternary operator formatting in `ConvertImgPDFController` for better readability.

Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>